<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/view_library"
        android:title="View Library" />
    <item
        android:id="@+id/download_books"
        android:title="Download Books" />
    <item
        android:id="@+id/settings"
        android:title="Settings" />
</menu>